[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

description = "A simple cli news reader app"
license = "MIT"
authors = ["erionrb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
ureq = "2.5.0"
